test/e2e/chainsaw/httproute-max-traffic-weight/assertions/rollout-healthy.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: httproute-max-weight-rollout
  namespace: default
status:
  (phase == 'Healthy'): true
