test/e2e/chainsaw/httproute-max-traffic-weight/resources/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: httproute-max-weight-rollout
  namespace: default
spec:
  replicas: 2
  strategy:
    canary:
      canaryService: max-weight-canary-service
      stableService: max-weight-stable-service
      trafficRouting:
        maxTrafficWeight: 100000
        plugins:
          argoproj-labs/gatewayAPI:
            httpRoute: httproute-max-weight
            namespace: default
      steps:
        - setWeight: 30000
        - pause: {duration: 30s}
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: httproute-max-weight
  template:
    metadata:
      labels:
        app: httproute-max-weight
    spec:
      containers:
        - name: rollouts-demo
          image: argoproj/rollouts-demo:red
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
